fix: search results on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -287,6 +287,9 @@ search-suggestions {
     search-suggestions item-name {
       display: block;
 
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
       font-family: var(--monospace);
     }
         search-suggestions item-name .highlight {
